--- a/postmarketos-wiki/html/en/ASUS_Eee_Pad_Transformer_(asus-tf101).html
+++ b/postmarketos-wiki/html/en/ASUS_Eee_Pad_Transformer_(asus-tf101).html
@@ -1345,7 +1345,7 @@ rfkill unblock 0
       </p>
       <p>
        <a class="image" href="../Boot_tf101.jpg">
-        <img alt="Boot tf101.jpg" decoding="async" height="257" src="../Boot_tf101.jpg" srcset="../Boot_tf101.jpg 1.5x ../" width="560"/>
+        <img alt="Boot tf101.jpg" decoding="async" height="257" src="../Boot_tf101.jpg" srcset="../Boot_tf101.jpg 1.5x ../Boot_tf101.jpg 2x" width="560"/>
        </a>
       </p>
       <p>
@@ -1353,7 +1353,7 @@ rfkill unblock 0
       </p>
       <p>
        <a class="image" href="../Xfce_tf101.png">
-        <img alt="Xfce tf101.png" decoding="async" height="350" src="../Xfce_tf101.png" srcset="../" width="560"/>
+        <img alt="Xfce tf101.png" decoding="async" height="350" src="../Xfce_tf101.png" srcset="../Xfce_tf101.png 1.5x" width="560"/>
        </a>
       </p>
       <p>
@@ -1361,7 +1361,7 @@ rfkill unblock 0
       </p>
       <p>
        <a class="image" href="../MATE_tf101.jpg">
-        <img alt="MATE tf101.jpg" decoding="async" height="420" src="../MATE_tf101.jpg" srcset="../" width="560"/>
+        <img alt="MATE tf101.jpg" decoding="async" height="420" src="../MATE_tf101.jpg" srcset="../MATE_tf101.jpg 1.5x" width="560"/>
        </a>
       </p>
       <h2>
