--- a/postmarketos-wiki/html/en/All_devices.html
+++ b/postmarketos-wiki/html/en/All_devices.html
@@ -9614,18 +9614,21 @@
          <td class="feature feature-partial">
           P
          </td>
-         <td class="field_Touch">
+         <td class="feature feature-yes">
+          Y
          </td>
-         <td class="feature feature-partial">
-          P
+         <td class="feature feature-yes">
+          Y
          </td>
          <td class="field_Wifi">
          </td>
-         <td class="field_Xwayland">
+         <td class="feature">
+          N
          </td>
          <td class="field_FDE">
          </td>
-         <td class="field_Mainline*">
+         <td class="feature">
+          N
          </td>
          <td class="field_Battery">
          </td>
@@ -9633,7 +9636,8 @@
          </td>
          <td class="field_IMU">
          </td>
-         <td class="field_Audio">
+         <td class="feature">
+          N
          </td>
          <td class="field_Bluetooth">
          </td>
