--- a/postmarketos-wiki/html/en/Allwinner_A64.html
+++ b/postmarketos-wiki/html/en/Allwinner_A64.html
@@ -47,7 +47,7 @@
         <tr class="">
          <td class="" colspan="2" style="text-align:center;">
           <a class="image" href="../Allwinner_A64_marketing_photo.jpg">
-           <img alt="Marketing photo of the Allwinner A64" decoding="async" height="195" src="../Allwinner_A64_marketing_photo.jpg" srcset="../" width="200"/>
+           <img alt="Marketing photo of the Allwinner A64" decoding="async" height="195" src="../Allwinner_A64_marketing_photo.jpg" srcset="../Allwinner_A64_marketing_photo.jpg 1.5x" width="200"/>
           </a>
           <br/>
           <span style="">
