--- a/postmarketos-wiki/html/en/Alsa_UCM.html
+++ b/postmarketos-wiki/html/en/Alsa_UCM.html
@@ -339,7 +339,7 @@
       </p>
       <p>
        <a class="image" href="../Alsa_mixer_mapping.png">
-        <img alt="Alsa mixer mapping.png" decoding="async" height="544" src="../Alsa_mixer_mapping.png" srcset="../" width="800"/>
+        <img alt="Alsa mixer mapping.png" decoding="async" height="544" src="../Alsa_mixer_mapping.png" srcset="../Alsa_mixer_mapping.png 1.5x" width="800"/>
        </a>
       </p>
       <h2>
