--- a/postmarketos-wiki/html/en/Amazon_Kindle_Fire_(amazon-otter).html
+++ b/postmarketos-wiki/html/en/Amazon_Kindle_Fire_(amazon-otter).html
@@ -47,7 +47,7 @@
         <tr class="">
          <td class="" colspan="2" style="text-align:center;">
           <a class="image" href="../Amzn_f_1.jpg">
-           <img alt="" decoding="async" height="378" src="../Amzn_f_1.jpg" srcset="../Amzn_f_1.jpg 1.5x ../" width="200"/>
+           <img alt="" decoding="async" height="378" src="../Amzn_f_1.jpg" srcset="../Amzn_f_1.jpg 1.5x ../Amzn_f_1.jpg 2x" width="200"/>
           </a>
          </td>
         </tr>
