--- a/postmarketos-wiki/html/en/BQ_Aquaris_U_(bq-chaozu).html
+++ b/postmarketos-wiki/html/en/BQ_Aquaris_U_(bq-chaozu).html
@@ -65,7 +65,7 @@
         <tr class="">
          <td class="" colspan="2" style="text-align:center;">
           <a class="image" href="../Chaozu.png">
-           <img alt="BQ Aquaris U" decoding="async" height="398" src="../Chaozu.png" srcset="../" width="200"/>
+           <img alt="BQ Aquaris U" decoding="async" height="398" src="../Chaozu.png" srcset="../Chaozu.png 1.5x" width="200"/>
           </a>
           <br/>
           <span style="">
