--- a/postmarketos-wiki/html/en/Broadcom_Kona.html
+++ b/postmarketos-wiki/html/en/Broadcom_Kona.html
@@ -343,7 +343,7 @@
         <tr class="">
          <td class="" colspan="2" style="text-align:center;">
           <a class="image" href="../BCM21664T.png">
-           <img alt="BCM21664T on the board for the Samsung Galaxy S Duos 2 (samsung-kyleprods)." decoding="async" height="213" src="../BCM21664T.png" srcset="../" width="200"/>
+           <img alt="BCM21664T on the board for the Samsung Galaxy S Duos 2 (samsung-kyleprods)." decoding="async" height="213" src="../BCM21664T.png" srcset="../BCM21664T.png 1.5x" width="200"/>
           </a>
           <br/>
           <span style="">
@@ -772,7 +772,7 @@
         <tr class="">
          <td class="" colspan="2" style="text-align:center;">
           <a class="image" href="../BCM23550.png">
-           <img alt="BCM23550 on the board for the Samsung Galaxy Grand Neo (samsung-baffinlite)." decoding="async" height="213" src="../BCM23550.png" srcset="../BCM23550.png 1.5x ../" width="200"/>
+           <img alt="BCM23550 on the board for the Samsung Galaxy Grand Neo (samsung-baffinlite)." decoding="async" height="213" src="../BCM23550.png" srcset="../BCM23550.png 1.5x ../BCM23550.png 2x" width="200"/>
           </a>
           <br/>
           <span style="">
