--- a/postmarketos-wiki/html/en/Category:Self-published_work.html
+++ b/postmarketos-wiki/html/en/Category:Self-published_work.html
@@ -51,10 +51,10 @@
         Media in category "Self-published work"
        </h2>
        <p>
-        The following 200 files are in this category, out of 327 total.
+        The following 200 files are in this category, out of 328 total.
        </p>
        (previous page) (
-       <a href="/index.php?title=Category:Self-published_work&amp;filefrom=Samsung-gtaxlwifi-xfce4.jpeg%0ASamsung-gtaxlwifi-xfce4.jpeg#mw-category-media" title="Category:Self-published work">
+       <a href="/index.php?title=Category:Self-published_work&amp;filefrom=Samsung-gt58lte.jpg%0ASamsung-gt58lte.jpg#mw-category-media" title="Category:Self-published work">
         next page
        </a>
        )
@@ -2223,6 +2223,24 @@
          <div style="width: 155px">
           <div class="thumb" style="width: 150px;">
            <div style="margin:15px auto;">
+            <a class="image" href="../Lg-mmh4x.jpg">
+             <img alt="Lg-mmh4x.jpg" decoding="async" height="120" src="../Lg-mmh4x.jpg" srcset="../135px-Lg-mmh4x.jpg 1.5x ../180px-Lg-mmh4x.jpg 2x" width="90"/>
+            </a>
+           </div>
+          </div>
+          <div class="gallerytext">
+           <a class="galleryfilename galleryfilename-truncate" href="../Lg-mmh4x.jpg" title="File:Lg-mmh4x.jpg">
+            Lg-mmh4x.jpg
+           </a>
+           3,024 × 4,032; 2.88 MB
+           <br/>
+          </div>
+         </div>
+        </li>
+        <li class="gallerybox" style="width: 155px">
+         <div style="width: 155px">
+          <div class="thumb" style="width: 150px;">
+           <div style="margin:15px auto;">
             <a class="image" href="../Lg-spirit-phosh.jpg">
              <img alt="Lg-spirit-phosh.jpg" decoding="async" height="120" src="../Lg-spirit-phosh.jpg" srcset="../124px-Lg-spirit-phosh.jpg 1.5x ../165px-Lg-spirit-phosh.jpg 2x" width="83"/>
             </a>
@@ -3641,27 +3659,9 @@
           </div>
          </div>
         </li>
-        <li class="gallerybox" style="width: 155px">
-         <div style="width: 155px">
-          <div class="thumb" style="width: 150px;">
-           <div style="margin:15px auto;">
-            <a class="image" href="../Samsung-gt58lte.jpg">
-             <img alt="Samsung-gt58lte.jpg" decoding="async" height="120" src="../Samsung-gt58lte.jpg" srcset="../135px-Samsung-gt58lte.jpg 1.5x ../179px-Samsung-gt58lte.jpg 2x" width="90"/>
-            </a>
-           </div>
-          </div>
-          <div class="gallerytext">
-           <a class="galleryfilename galleryfilename-truncate" href="../Samsung-gt58lte.jpg" title="File:Samsung-gt58lte.jpg">
-            Samsung-gt58lte.jpg
-           </a>
-           1,591 × 2,127; 798 KB
-           <br/>
-          </div>
-         </div>
-        </li>
        </ul>
        (previous page) (
-       <a href="/index.php?title=Category:Self-published_work&amp;filefrom=Samsung-gtaxlwifi-xfce4.jpeg%0ASamsung-gtaxlwifi-xfce4.jpeg#mw-category-media" title="Category:Self-published work">
+       <a href="/index.php?title=Category:Self-published_work&amp;filefrom=Samsung-gt58lte.jpg%0ASamsung-gt58lte.jpg#mw-category-media" title="Category:Self-published work">
         next page
        </a>
        )
