--- a/postmarketos-wiki/html/en/Exynos_mainline_porting.html
+++ b/postmarketos-wiki/html/en/Exynos_mainline_porting.html
@@ -150,7 +150,7 @@
         <tr class="">
          <td class="" colspan="2" style="text-align:center;">
           <a class="image" href="../Samsung_Exynos_3250.jpg">
-           <img alt="Exynos 3250 from the Samsung Gear 2 smartwatch" decoding="async" height="203" src="../Samsung_Exynos_3250.jpg" srcset="../" width="200"/>
+           <img alt="Exynos 3250 from the Samsung Gear 2 smartwatch" decoding="async" height="203" src="../Samsung_Exynos_3250.jpg" srcset="../Samsung_Exynos_3250.jpg 1.5x" width="200"/>
           </a>
           <br/>
           <span style="">
