--- a/postmarketos-wiki/html/en/HP_Slate_21_(hp-phobos).html
+++ b/postmarketos-wiki/html/en/HP_Slate_21_(hp-phobos).html
@@ -47,7 +47,7 @@
         <tr class="">
          <td class="" colspan="2" style="text-align:center;">
           <a class="image" href="../Phobos.jpg">
-           <img alt="HP Slate 21" decoding="async" height="269" src="../Phobos.jpg" srcset="../Phobos.jpg 1.5x ../" width="200"/>
+           <img alt="HP Slate 21" decoding="async" height="269" src="../Phobos.jpg" srcset="../Phobos.jpg 1.5x ../Phobos.jpg 2x" width="200"/>
           </a>
           <br/>
           <span style="">
