--- a/postmarketos-wiki/html/en/LG_G7_ThinQ_(lg-judyln).html
+++ b/postmarketos-wiki/html/en/LG_G7_ThinQ_(lg-judyln).html
@@ -47,7 +47,7 @@
         <tr class="">
          <td class="" colspan="2" style="text-align:center;">
           <a class="image" href="../Lg_g7.png">
-           <img alt="LG G7 ThinQ" decoding="async" height="409" src="../Lg_g7.png" srcset="../Lg_g7.png 1.5x ../" width="200"/>
+           <img alt="LG G7 ThinQ" decoding="async" height="409" src="../Lg_g7.png" srcset="../Lg_g7.png 1.5x ../Lg_g7.png 2x" width="200"/>
           </a>
           <br/>
           <span style="">
