--- a/postmarketos-wiki/html/en/Motorola_Moto_G_2015_(motorola-osprey).html
+++ b/postmarketos-wiki/html/en/Motorola_Moto_G_2015_(motorola-osprey).html
@@ -47,7 +47,7 @@
         <tr class="">
          <td class="" colspan="2" style="text-align:center;">
           <a class="image" href="../Moto_G_2015.png">
-           <img alt="Moto G 2015" decoding="async" height="382" src="../Moto_G_2015.png" srcset="../Moto_G_2015.png 1.5x ../" width="200"/>
+           <img alt="Moto G 2015" decoding="async" height="382" src="../Moto_G_2015.png" srcset="../Moto_G_2015.png 1.5x ../Moto_G_2015.png 2x" width="200"/>
           </a>
           <br/>
           <span style="">
