--- a/postmarketos-wiki/html/en/Motorola_Moto_X_(motorola-ghost).html
+++ b/postmarketos-wiki/html/en/Motorola_Moto_X_(motorola-ghost).html
@@ -65,7 +65,7 @@
         <tr class="">
          <td class="" colspan="2" style="text-align:center;">
           <a class="image" href="../Moto_x_ghost_xt1052.jpg">
-           <img alt="Moto X" decoding="async" height="384" src="../Moto_x_ghost_xt1052.jpg" srcset="../Moto_x_ghost_xt1052.jpg 1.5x ../" width="200"/>
+           <img alt="Moto X" decoding="async" height="384" src="../Moto_x_ghost_xt1052.jpg" srcset="../Moto_x_ghost_xt1052.jpg 1.5x ../Moto_x_ghost_xt1052.jpg 2x" width="200"/>
           </a>
           <br/>
           <span style="">
