--- a/postmarketos-wiki/html/en/Next_Thing_Co._CHIP_(ntc-chip).html
+++ b/postmarketos-wiki/html/en/Next_Thing_Co._CHIP_(ntc-chip).html
@@ -47,7 +47,7 @@
         <tr class="">
          <td class="" colspan="2" style="text-align:center;">
           <a class="image" href="../Ntc_chip_front.png">
-           <img alt="Next Thing Co. CHIP" decoding="async" height="295" src="../Ntc_chip_front.png" srcset="../Ntc_chip_front.png 1.5x ../" width="200"/>
+           <img alt="Next Thing Co. CHIP" decoding="async" height="295" src="../Ntc_chip_front.png" srcset="../Ntc_chip_front.png 1.5x ../Ntc_chip_front.png 2x" width="200"/>
           </a>
           <br/>
           <span style="">
