--- a/postmarketos-wiki/html/en/Qualcomm_Snapdragon_200_(MSM8212).html
+++ b/postmarketos-wiki/html/en/Qualcomm_Snapdragon_200_(MSM8212).html
@@ -47,7 +47,7 @@
         <tr class="">
          <td class="" colspan="2" style="text-align:center;">
           <a class="image" href="../Qualcomm_MSM8212.jpeg">
-           <img alt="MSM8212 SoC in ceramic BGA capsule" decoding="async" height="195" src="../Qualcomm_MSM8212.jpeg" srcset="../Qualcomm_MSM8212.jpeg 1.5x ../" width="200"/>
+           <img alt="MSM8212 SoC in ceramic BGA capsule" decoding="async" height="195" src="../Qualcomm_MSM8212.jpeg" srcset="../Qualcomm_MSM8212.jpeg 1.5x ../Qualcomm_MSM8212.jpeg 2x" width="200"/>
           </a>
           <br/>
           <span style="">
