--- a/postmarketos-wiki/html/en/Qualcomm_Snapdragon_600_(APQ8064).html
+++ b/postmarketos-wiki/html/en/Qualcomm_Snapdragon_600_(APQ8064).html
@@ -629,7 +629,7 @@
       </h2>
       <p>
        <a class="image" href="../Qualcomm_apq8064_block.jpg" title="APQ8064 block diagram">
-        <img alt="APQ8064 block diagram" decoding="async" height="893" src="../Qualcomm_apq8064_block.jpg" srcset="../" width="1000"/>
+        <img alt="APQ8064 block diagram" decoding="async" height="893" src="../Qualcomm_apq8064_block.jpg" srcset="../Qualcomm_apq8064_block.jpg 1.5x" width="1000"/>
        </a>
       </p>
       <p>
