--- a/postmarketos-wiki/html/en/Qualcomm_Snapdragon_615_616_(MSM8939).html
+++ b/postmarketos-wiki/html/en/Qualcomm_Snapdragon_615_616_(MSM8939).html
@@ -47,7 +47,7 @@
         <tr class="">
          <td class="" colspan="2" style="text-align:center;">
           <a class="image" href="../Qualcomm_MSM8939.jpg">
-           <img alt="MSM8939 SoC in ceramic BGA capsule" decoding="async" height="171" src="../Qualcomm_MSM8939.jpg" srcset="../" width="200"/>
+           <img alt="MSM8939 SoC in ceramic BGA capsule" decoding="async" height="171" src="../Qualcomm_MSM8939.jpg" srcset="../Qualcomm_MSM8939.jpg 1.5x" width="200"/>
           </a>
           <br/>
           <span style="">
