--- a/postmarketos-wiki/html/en/Qualcomm_Snapdragon_660_(SDM660).html
+++ b/postmarketos-wiki/html/en/Qualcomm_Snapdragon_660_(SDM660).html
@@ -331,7 +331,7 @@
         <tr class="">
          <td class="" colspan="2" style="text-align:center;">
           <a class="image" href="../Qualcomm_SDM636.jpg">
-           <img alt="Qualcomm SDM636 in ceramic package" decoding="async" height="198" src="../Qualcomm_SDM636.jpg" srcset="../" width="200"/>
+           <img alt="Qualcomm SDM636 in ceramic package" decoding="async" height="198" src="../Qualcomm_SDM636.jpg" srcset="../Qualcomm_SDM636.jpg 1.5x" width="200"/>
           </a>
           <br/>
           <span style="">
@@ -604,7 +604,7 @@
         <tr class="">
          <td class="" colspan="2" style="text-align:center;">
           <a class="image" href="../Qualcomm_SDM660.jpg">
-           <img alt="Qualcomm SDM660 in ceramic package" decoding="async" height="200" src="../Qualcomm_SDM660.jpg" srcset="../Qualcomm_SDM660.jpg 1.5x ../" width="200"/>
+           <img alt="Qualcomm SDM660 in ceramic package" decoding="async" height="200" src="../Qualcomm_SDM660.jpg" srcset="../Qualcomm_SDM660.jpg 1.5x ../Qualcomm_SDM660.jpg 2x" width="200"/>
           </a>
           <br/>
           <span style="">
