--- a/postmarketos-wiki/html/en/Qualcomm_Snapdragon_835_(MSM8998).html
+++ b/postmarketos-wiki/html/en/Qualcomm_Snapdragon_835_(MSM8998).html
@@ -47,7 +47,7 @@
         <tr class="">
          <td class="" colspan="2" style="text-align:center;">
           <a class="image" href="../Qualcomm_MSM8998.jpg">
-           <img alt="MSM8998 in ceramic package" decoding="async" height="191" src="../Qualcomm_MSM8998.jpg" srcset="../" width="200"/>
+           <img alt="MSM8998 in ceramic package" decoding="async" height="191" src="../Qualcomm_MSM8998.jpg" srcset="../Qualcomm_MSM8998.jpg 1.5x" width="200"/>
           </a>
           <br/>
           <span style="">
