--- a/postmarketos-wiki/html/en/Qualcomm_Snapdragon_845_(SDM845).html
+++ b/postmarketos-wiki/html/en/Qualcomm_Snapdragon_845_(SDM845).html
@@ -47,7 +47,7 @@
         <tr class="">
          <td class="" colspan="2" style="text-align:center;">
           <a class="image" href="../Sdm845.png">
-           <img alt="" decoding="async" height="193" src="../Sdm845.png" srcset="../Sdm845.png 1.5x ../" width="200"/>
+           <img alt="" decoding="async" height="193" src="../Sdm845.png" srcset="../Sdm845.png 1.5x ../Sdm845.png 2x" width="200"/>
           </a>
          </td>
         </tr>
