--- a/postmarketos-wiki/html/en/Samsung_Galaxy_S5_mini_(samsung-kminilte).html
+++ b/postmarketos-wiki/html/en/Samsung_Galaxy_S5_mini_(samsung-kminilte).html
@@ -47,7 +47,7 @@
         <tr class="">
          <td class="" colspan="2" style="text-align:center;">
           <a class="image" href="../Samsung_Galaxy_S5_mini.png">
-           <img alt="Samsung Galaxy S5 mini" decoding="async" height="379" src="../Samsung_Galaxy_S5_mini.png" srcset="../Samsung_Galaxy_S5_mini.png 1.5x ../" width="200"/>
+           <img alt="Samsung Galaxy S5 mini" decoding="async" height="379" src="../Samsung_Galaxy_S5_mini.png" srcset="../Samsung_Galaxy_S5_mini.png 1.5x ../Samsung_Galaxy_S5_mini.png 2x" width="200"/>
           </a>
           <br/>
           <span style="">
