--- a/postmarketos-wiki/html/en/Samsung_Galaxy_S_Duos_(samsung-s7562).html
+++ b/postmarketos-wiki/html/en/Samsung_Galaxy_S_Duos_(samsung-s7562).html
@@ -65,7 +65,7 @@
         <tr class="">
          <td class="" colspan="2" style="text-align:center;">
           <a class="image" href="../Samsung_Galaxy_S_Duos.jpg">
-           <img alt="Samsung Galaxy S Duos" decoding="async" height="381" src="../Samsung_Galaxy_S_Duos.jpg" srcset="../" width="200"/>
+           <img alt="Samsung Galaxy S Duos" decoding="async" height="381" src="../Samsung_Galaxy_S_Duos.jpg" srcset="../Samsung_Galaxy_S_Duos.jpg 1.5x" width="200"/>
           </a>
           <br/>
           <span style="">
