--- a/postmarketos-wiki/html/en/Wiko_Lenny_2_(wiko-lenny2).html
+++ b/postmarketos-wiki/html/en/Wiko_Lenny_2_(wiko-lenny2).html
@@ -595,10 +595,10 @@
       </ul>
       <p>
        <a class="image" href="../Mate_and_Chocolate_Doom_with_Freedoom_on_Wiko_Lenny_2.png" title="Mate and Chocolate Doom">
-        <img alt="Mate and Chocolate Doom" decoding="async" height="427" src="../Mate_and_Chocolate_Doom_with_Freedoom_on_Wiko_Lenny_2.png" srcset="../Mate_and_Chocolate_Doom_with_Freedoom_on_Wiko_Lenny_2.png 1.5x ../" width="240"/>
+        <img alt="Mate and Chocolate Doom" decoding="async" height="427" src="../Mate_and_Chocolate_Doom_with_Freedoom_on_Wiko_Lenny_2.png" srcset="../Mate_and_Chocolate_Doom_with_Freedoom_on_Wiko_Lenny_2.png 1.5x ../Mate_and_Chocolate_Doom_with_Freedoom_on_Wiko_Lenny_2.png 2x" width="240"/>
        </a>
        <a class="image" href="../Lenny2_webbrowsing.png" title="Mate, Midori and the Matchbox virtual keyboard">
-        <img alt="Mate, Midori and the Matchbox virtual keyboard" decoding="async" height="427" src="../Lenny2_webbrowsing.png" srcset="../Lenny2_webbrowsing.png 1.5x ../" width="240"/>
+        <img alt="Mate, Midori and the Matchbox virtual keyboard" decoding="async" height="427" src="../Lenny2_webbrowsing.png" srcset="../Lenny2_webbrowsing.png 1.5x ../Lenny2_webbrowsing.png 2x" width="240"/>
        </a>
       </p>
       <h2>
