--- a/postmarketos-wiki/html/en/Anbox.html
+++ b/postmarketos-wiki/html/en/Anbox.html
@@ -124,7 +124,7 @@
       <div class="thumb tright">
        <div class="thumbinner" style="width:302px;">
         <a class="image" href="../Anbox_app_manager.png">
-         <img alt="" class="thumbimage" decoding="async" height="328" src="../Anbox_app_manager.png" srcset="../" width="300"/>
+         <img alt="" class="thumbimage" decoding="async" height="328" src="../Anbox_app_manager.png" srcset="../Anbox_app_manager.png 1.5x" width="300"/>
         </a>
         <div class="thumbcaption">
          <div class="magnify">
