--- a/postmarketos-wiki/html/en/BlackBerry_PlayBook_(blackberry-playbook).html
+++ b/postmarketos-wiki/html/en/BlackBerry_PlayBook_(blackberry-playbook).html
@@ -47,7 +47,7 @@
         <tr class="">
          <td class="" colspan="2" style="text-align:center;">
           <a class="image" href="../Playbook.jpg">
-           <img alt="" decoding="async" height="250" src="../Playbook.jpg" srcset="../Playbook.jpg 1.5x ../" width="200"/>
+           <img alt="" decoding="async" height="250" src="../Playbook.jpg" srcset="../Playbook.jpg 1.5x ../Playbook.jpg 2x" width="200"/>
           </a>
          </td>
         </tr>
