--- a/postmarketos-wiki/html/en/Serial_debugging.html
+++ b/postmarketos-wiki/html/en/Serial_debugging.html
@@ -542,7 +542,7 @@
          <div class="thumb" style="width: 270px;">
           <div style="margin:15px auto;">
            <a class="image" href="../Dreamlte_uart_jtag.jpg">
-            <img alt="" decoding="async" height="180" src="../Dreamlte_uart_jtag.jpg" srcset="../" width="191"/>
+            <img alt="" decoding="async" height="180" src="../Dreamlte_uart_jtag.jpg" srcset="../Dreamlte_uart_jtag.jpg 1.5x" width="191"/>
            </a>
           </div>
          </div>
