--- a/postmarketos-wiki/html/en/Serial_debugging:Cable_schematics.html
+++ b/postmarketos-wiki/html/en/Serial_debugging:Cable_schematics.html
@@ -438,7 +438,7 @@
       </h2>
       <p>
        <a class="image" href="../RaspberryPiUART.png">
-        <img alt="RaspberryPiUART.png" decoding="async" height="389" src="../RaspberryPiUART.png" srcset="../RaspberryPiUART.png 1.5x ../" width="400"/>
+        <img alt="RaspberryPiUART.png" decoding="async" height="389" src="../RaspberryPiUART.png" srcset="../RaspberryPiUART.png 1.5x ../RaspberryPiUART.png 2x" width="400"/>
        </a>
       </p>
       <table role="text container" style="color: inherit; background-color: #fee7e6; border: 1px solid #d33; margin: 4px 0; border-collapse: collapse;">
