--- a/postmarketos-wiki/html/en/Sony_Xperia_U_(sony-kumquat).html
+++ b/postmarketos-wiki/html/en/Sony_Xperia_U_(sony-kumquat).html
@@ -47,7 +47,7 @@
         <tr class="">
          <td class="" colspan="2" style="text-align:center;">
           <a class="image" href="../Kumquat.jpg">
-           <img alt="" decoding="async" height="254" src="../Kumquat.jpg" srcset="../Kumquat.jpg 1.5x ../" width="200"/>
+           <img alt="" decoding="async" height="254" src="../Kumquat.jpg" srcset="../Kumquat.jpg 1.5x ../Kumquat.jpg 2x" width="200"/>
           </a>
          </td>
         </tr>
