--- a/postmarketos-wiki/html/en/Samsung_Galaxy_Ace_4_(samsung-heatqlte).html
+++ b/postmarketos-wiki/html/en/Samsung_Galaxy_Ace_4_(samsung-heatqlte).html
@@ -394,7 +394,7 @@ armv7</td>
 There was a forgotten patch<sup id="cite_ref-1" class="reference"><a href="#cite_note-1">[1]</a></sup> from 2015 on the kernel mailing list. Jakko picked up the work on top of that, and the review started in February 2023 <sup id="cite_ref-2" class="reference"><a href="#cite_note-2">[2]</a></sup>.
 </p>
 <h2><span class="mw-headline" id="USB_OTG">USB OTG</span></h2>
-<p>Another <code>rt5033-charger</code> driver issue. It's currently unable to power up a usb device in mainline. Try a hub with external power supply.
+<p>Another <code>rt5033-charger</code> driver issue. It's currently unable to power up a usb device in mainline. Therefore On some device (like <a href="../en/Samsung_Galaxy_A5_2015_(samsung-a5).html" title="Samsung Galaxy A5 2015 (samsung-a5)">Samsung Galaxy A5 2015 (samsung-a5)</a>(SM-A5000)), the otg only work with a usb hub that support a external power supply (like the USB OTG Charging Hub). On some another device the otg might not work.
 </p>
 <h2><span class="mw-headline" id="Flash_LED">Flash LED</span></h2>
 <p>Currently WIP. It can be controlled with SG Micro SGM3140 charge pump LED driver<sup id="cite_ref-3" class="reference"><a href="#cite_note-3">[3]</a></sup>.
